# src/main/java/com/codeonblue/minesweeper/dto/MarkCellRequest.java
@@ -1,20 +1,10 @@
 package com.codeonblue.minesweeper.dto;
 
-public class MarkCellRequest {
+public class MarkCellRequest extends MarkCellDto {
 
     public MarkCellRequest() {}
 
-    private CellStatus currentStatus;
-
-    public MarkCellRequest(CellStatus currentStatus) {
-        this.currentStatus = currentStatus;
-    }
-
-    public CellStatus getCurrentStatus() {
-        return currentStatus;
-    }
-
-    public void setCurrentStatus(CellStatus currentStatus) {
-        this.currentStatus = currentStatus;
+    public MarkCellRequest(CellStatus cellCurrentStatus) {
+        super(cellCurrentStatus);
     }
 }
